@@ -228,6 +228,7 @@ enum
   F_RESIZEMOVE,
   F_RESIZEMOVE_MAXIMIZE,
   F_SEND_STRING,
+  F_STATE,
   F_STICK,
   F_UPDATE_DECOR,
   F_WARP,
