@@ -1,5 +1,15 @@
 2002-01-31  Dominik Vogt  <dominik.vogt@gmx.de>
 
+	* fvwm/conditional.c (CreateConditionMask):
+	(MatchesConditionMask):
+	* fvwm/builtins.c (CMD_State):
+	* fvwm/fvwm.h (struct):
+	* fvwm/functions.h:
+	* fvwm/commands.h:
+	* fvwm/functions.c (func_config):
+	new command "State"
+	new condition "State"
+
 	* libs/queue.c:
 	dixed core dump
 
